@@ -226,8 +226,8 @@ class MccsSubrack(SKABaseDevice[SubrackComponentManager]):
         "power_supply_powers": "powerSupplyPowers",
         "power_supply_voltages": "powerSupplyVoltages",
         "power_supply_fan_speeds": "powerSupplyFanSpeeds",
-        "subrack_fan_speed": "subrackFanSpeeds",
-        "subrack_fan_speed_percent": "subrackFanSpeedsPercent",
+        "subrack_fan_speeds": "subrackFanSpeeds",
+        "subrack_fan_speeds_percent": "subrackFanSpeedsPercent",
         "subrack_fan_mode": "subrackFanModes",
         "tpm_currents": "tpmCurrents",
         "tpm_powers": "tpmPowers",
