@@ -1,6 +1,9 @@
 # Version History
 
-## unrelease
+## unreleased
+
+* MCCS-1351 - Revert subrack_fan_speeds change
+* MCCS-1346 - TPM initialisation bugfix
 
 ## 0.3.1
 
@@ -23,6 +26,7 @@
 
 * MCCS-1318 - Fix pyfabil/aavs commit SHAs
 * MCCS-1316/ MCCS-1319 - add facility yaml files
+
 ## 0.2.0
 
 * MCCS-1256 - External simulator
